--- a/grc338/restaurantmenucss/style.css
+++ b/grc338/restaurantmenucss/style.css
@@ -1,4 +1,8 @@
 /* CSS DOCUMENT */ 
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
 
 html {
     background: #ECECED;
@@ -7,48 +11,58 @@ html {
 body {
     background: #ECECED;
     color: #545454;
-    padding: 2em 4em 4em;
     margin: 1.5em; 
+    padding: 2em 4em 4em;
     font-family: sans-serif;
+    line-height: 1; 
 }
 
-h1{ 
+h1 /* "Koberl at Blue */ { 
     color: #245D68; 
-    text-transform: uppercase; 
-    text-align: center;
-    font-size: 3em;
     margin-top: 0.25em;
     margin-bottom: 0.25em;
+    text-transform: uppercase; 
+    margin: auto;
+    font-size: 3em;
 }
 
 
-h2{ 
-    color: #4F9990;
-    font-size: 1.5em;
-    text-align: center;
-    /*padding: 1em; */
+h2 /* "Main Menu */ { 
+    color: #B5621B;
+    letter-spacing: 1.5em;
+    margin: 0; 
+    font-size: 1.3em;
     text-transform: uppercase;
 }
 
-h5, h6 {
-    color: #545454;
-    font-weight: 600;
-    line-height: 1;
-    text-align: center; 
+ul{ 
+    border: .1em solid;
+    margin: -;
+    padding: 0; 
+    list-style-type: none;
+    border-style: 2em solid #000; 
+    border-color: #245D68; 
     
 }
-.fooditem{ 
-    color: #56A69C;
+
+.foodtype{ 
+    color: #FFF;
+    background-color: #245D68;
     text-align: center;
     padding: 1em;
     text-transform: uppercase;
 }
 
+.food{ 
+    text-align:center;
+}
+
 .description{ 
-    font-style: italic; 
+    padding: 0; 
     text-align: center;
+    font-style: italic; 
     font-family: serif; 
-    line-height: .5;
+    line-height: normal;
 }
 
 .price{ 
@@ -56,15 +70,5 @@ h5, h6 {
     font-family: serif;
 }
 
-.food{ 
-    text-align:center;
-}
 
-ul{ 
-    list-style-type: none;
-    padding: 0; 
-    margin: 0;
-}
-    
-}
--
+
