--- a/grc338/restaurantmenucss/style.css
+++ b/grc338/restaurantmenucss/style.css
@@ -29,7 +29,6 @@ h1 /* "Koberl at Blue */ {
 
 h2 /* "Main Menu */ { 
     color: #B5621B;
-    letter-spacing: 1.5em;
     margin: 0; 
     font-size: 1.3em;
     text-transform: uppercase;
@@ -59,6 +58,8 @@ ul{
 
 .description{ 
     padding: 0; 
+    margin-left: 2em;
+    margin-right: 2em;  
     text-align: center;
     font-style: italic; 
     font-family: serif; 
