--- a/grc338/restaurantmenucss/style.css
+++ b/grc338/restaurantmenucss/style.css
@@ -5,11 +5,11 @@
 */
 
 html {
-    background: #ECECED;
+    background: #E8E8E8;
 }
 
 body {
-    background: #ECECED;
+    background: #E8E8E8;
     color: #545454;
     margin: 1.5em; 
     padding: 2em 4em 4em;
