--- a/bored/style.css
+++ b/bored/style.css
@@ -30,14 +30,32 @@ h2{
 .signature{ 
     padding: .5em;
     }
-img.images {
-    display: block;
-    margin-left: auto; 
-    margin-right: auto;
-    max-width:100%; 
-    height: auto;
 
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 4px;
+}
 
+/* Create four equal columns that sits next to each other */
+.column {
+  flex: 25%;
+  max-width: 25%;
+  padding: 0 4px;
+}
+
+.column img {
+  margin-top: 8px;
+  vertical-align: middle;
+  width: 100%;
+}
+
+/* Responsive layout - makes a two column-layout instead of four columns */
+@media screen and (max-width: 800px) {
+  .column {
+    flex: 50%;
+    max-width: 50%;
+  }
 }
 
 
