--- a/grc338/lasagna/lasagnastyle.css
+++ b/grc338/lasagna/lasagnastyle.css
@@ -1,6 +1,69 @@
 /*CSS DOCUMENT*/
 
+html{ 
+    background-color: #F4D9BF;
+    
+}
+
+body{ 
+    background-color: #FFF; 
+    margin: 2em; 
+}
 
 img {
-width: 100%;}
+    width: 50%;
+    display: block;
+    margin-left: auto; 
+    margin-right: auto; 
+}
 
+h1{
+    text-transform: uppercase; 
+    font-family: sans-serif; 
+}
+
+h2{ 
+    /*text-transform: uppercase; */
+    font-family: sans-serif; 
+    font-weight: normal; 
+}
+
+.container{ 
+    margin: 1em;
+    background-color: #FFF
+}
+
+.maincontent{ 
+    font-family: sans-serif;
+}
+.intro p{ 
+    margin-left: 5em; 
+    margin-right: 3em; 
+    margin-top: 2em;
+    font-family: sans-serif;
+}
+
+.ingredients{ 
+    margin-left: 7em;
+    margin-right: 3em; 
+    margin-bottom: 2em;
+    float: left; 
+    width: 30%; 
+}
+
+.directions{
+    margin-right: 3em; 
+    margin-bottom: 2em;
+    float: left; 
+    width: 50%;
+}
+
+footer{ 
+    float: none; 
+    clear: both; 
+    margin-bottom: 1em;
+}
+
+h1, h2{ 
+    text-align: center; 
+}
