--- a/grc338/lasagna/lasagnastyle.css
+++ b/grc338/lasagna/lasagnastyle.css
@@ -23,7 +23,7 @@ h1{
 }
 
 .intro{
-    background-color: rgb(242,195,167, .7);  
+    background-color: rgb(242,195,167);  
     padding: 1em;
 }
 
