--- a/grc338/redesign-content-hierarchy/style.css
+++ b/grc338/redesign-content-hierarchy/style.css
@@ -6,22 +6,40 @@ img{
 
 a{ 
     text-decoration: none; 
+    text-transform: uppercase;
+    font-family: sans-serif; 
+    font-weight: bold;
+    color: #55C3C4;
 }
 
-/* .mainmenu a{ 
-    color: 
+/*.mainmenu a{ 
+    text-transform: uppercase;
+    font-family: sans-serif; 
+    font-weight: bold;
+    color: #55C3C4;
 } */
 
-.mainmenu ul{ 
+h1{ 
+    margin: 0;}
+
+ul{ 
     list-style-type: none; 
-    padding: 0;
+    padding: 0;}
+
+.mainmenu ul{ 
+    margin: 0; 
 }
 
 .mainmenu li{ 
     float: left; 
-    margin-right: 3em;
-   
+    margin-right: 2em;
+    padding: 1em;
 }
+
+
+
+
+
 
 .header, .maincontent { 
     clear: both; 
