--- a/grc338/redesign-mobile-first/style.css
+++ b/grc338/redesign-mobile-first/style.css
@@ -1,12 +1,25 @@
 /* CSS document */ 
 
 html{ 
-    font-family: sans-serif;
+    font-family: Helvetica Neue, Helvetica, Arial,sans-serif; ;
     margin: 2em; 
 }
 
 img{ 
     width: 100%; 
+    display: block; 
+}
+
+.header img{ 
+    width: 30%;
+    float: left; 
+    display: block; 
+}
+
+.brand { 
+    float: left; 
+    margin: 0; 
+    width: 60%; 
 }
 
 h1{ 
@@ -20,8 +33,8 @@ ul{
     padding: 0;}
 
 .maincontent { 
-    border-top: solid 1px; 
-    border-color: black; 
+    border-top: solid 2px; 
+    border-color: red; 
 }
 
 /*mainmenu content*/ 
@@ -35,13 +48,15 @@ ul{
 } 
 
 .mainmenu ul{ 
-    margin-left: 1.5em;
-}
+    text-align: center; 
+    display: inline-block;
+    }
 
 .mainmenu li{ 
     float: left; 
     margin-right: 1em;
     padding: 1em;
+    display: inline-block;
 }
 
 /*index.html*/
@@ -51,9 +66,9 @@ ul{
 
 .location-block{ 
     position: absolute; 
-    bottom: 70em; 
-    right: 3em; 
-    background-color: rgb(250, 217, 78);
+    bottom: 19.25em; 
+    right: 3em;
+    background-color: #55C3C4;
     padding-left: 1em; 
     padding-right: 1em;
 }
@@ -64,7 +79,7 @@ ul{
     color: white; 
 }
 
-.header, .maincontent { 
+.header, .maincontent, .mainmenu { 
     clear: both; 
 }
 
