--- a/grc338/redesign-mobile-first/style.css
+++ b/grc338/redesign-mobile-first/style.css
@@ -1,7 +1,7 @@
 /* CSS document */ 
 
 html{ 
-    font-family: Helvetica Neue, Helvetica, Arial,sans-serif; ;
+    font-family: Helvetica; 
     margin: 2em; 
 }
 
@@ -11,15 +11,15 @@ img{
 }
 
 .header img{ 
-    width: 30%;
     float: left; 
     display: block; 
 }
 
 .brand { 
     float: left; 
-    margin: 0; 
     width: 60%; 
+    padding-top: .8em;
+    line-height: 1em; 
 }
 
 h1{ 
@@ -33,7 +33,6 @@ ul{
     padding: 0;}
 
 .maincontent { 
-    border-top: solid 2px; 
     border-color: red; 
 }
 
@@ -50,6 +49,7 @@ ul{
 .mainmenu ul{ 
     text-align: center; 
     display: inline-block;
+    border-bottom: solid 2px black; 
     }
 
 .mainmenu li{ 
