--- a/grc338/redesign-mobile-first/style.css
+++ b/grc338/redesign-mobile-first/style.css
@@ -9,7 +9,7 @@ img{
     display: block; 
 }
 
-h3, p, li{ 
+h3, li{ 
     font-size: 1.5em;
 }
 
@@ -84,21 +84,15 @@ ul{
 }
 
 .maincontent h4{ 
-    color: #55C3C4; 
     text-transform: uppercase;
-}
-
-.maincontent ul{ 
-    line-height: 1em;
 }
 
 .hours{ 
     font-weight: bold; 
 }
-
 /*menu.html*/ 
 .burgers, .range, .sandwiches, .garden, .other{ 
-    border: double;
+    border: solid;
     padding-left: 1em; 
     padding-right: 1em;
     margin: 1em;
