--- a/grc338/redesign-mobile-first/style.css
+++ b/grc338/redesign-mobile-first/style.css
@@ -20,13 +20,16 @@ h3{
 .maincontent h1{ 
     text-transform: uppercase; 
     font-weight: normal; 
-    font-size: 5em;
+    font-size: 6em;
     padding: 1em;
-    margin: 0; 
+    margin: 0;
+    margin-bottom: 1em; 
+    margin-top: 1em; 
     text-align: center; 
     line-height: 1.5em;
-    background-color: #E20C04;
-    color: #FFF; 
+    color: #FFF;
+    background-color: #55C3C4; 
+    
 }
 
 .bold{ 
@@ -136,6 +139,7 @@ ul{
     width: 45%;
     padding-bottom: 15em;
     margin-top: 0; 
+    color: #202020; 
 }
 
 .details ul{ 
@@ -171,6 +175,7 @@ ul{
     padding-left: 1.5em;
     padding-right: 1.5em;
     font-size: 1.5em; 
+    color: #202020; 
 }
 
 
