--- a/grc339/flexbox-basic-layout/flexbox.css
+++ b/grc339/flexbox-basic-layout/flexbox.css
@@ -12,6 +12,7 @@ div.container {
         display: flex;
         flex-wrap: wrap;
         max-width: 60em;
+	margin: 1em;
         padding 1em;
 }
 
