--- a/grc339/final-website-mobile-first/style.css
+++ b/grc339/final-website-mobile-first/style.css
@@ -15,50 +15,58 @@ figure {
     margin: 0;
 }
 
-img {
-    width: 90%;
+section { 
+    padding: 1em; 
+}
+
+img{ 
+    width: 100%; 
+}
+
+header img {
+    width: 70%;
     display: block;
     margin-left: auto;
     margin-right: auto;
     padding-top: 1em; 
 }
-
+   
 ul {
     list-style-type: none;
     padding: 0; 
 }
 
-header{ 
-    background-color: #F7AF9D; 
-}
-
 nav{ 
     display: flex; 
     justify-content: center; 
+    background-color: #F7AF9D;
     width: 100; 
+    box-shadow: 1px 2px #D3D3D3; 
 }
 
-nav li{ 
-    float: left; 
+nav li{  
     margin-right: 1em; 
     text-transform: uppercase;
-    font-weight: bold; 
+    float: left; 
+    padding: 1em;
 }
 
 nav a{ 
-    text-decoration: none; 
     font-family: 'Open Sans'; 
+    font-weight: 600;
+    color: #FFF; 
+}
+
+nav ul{ 
+    margin: 0;
 }
 
 a{ 
-    text-decoration: none; }
-
-section.mainstory { 
-    background-color: aquamarine; 
+    text-decoration: none; 
 }
 
 h3 { 
-    color: #001858; 
+    color: #065143; 
     font-family: 'Open Sans'; 
     font-weight: 800;
     text-transform: uppercase;
@@ -68,5 +76,9 @@ h3 {
 p{ 
     color: #172c66; 
     font-family: 'Lora';
-    font-weight: 300;
+    font-weight: 100;
+}
+
+section.teaser{ 
+    margin-top: 1em; 
 }
