--- a/grc339/final-website-mobile-first/style.css
+++ b/grc339/final-website-mobile-first/style.css
@@ -40,9 +40,13 @@ ul {
 nav{ 
     display: flex; 
     justify-content: center; 
-    background-color: #de7073;
     width: 100; 
     padding: .5em; 
+}
+
+header nav{ 
+    background-color: #de7073;
+    margin-top: 1em;
 }
 
 nav li{  
@@ -71,14 +75,14 @@ h2, h3 {
     font-family: 'Open Sans'; 
     font-weight: 800;
     text-transform: uppercase;
-    padding: 0 1em 0 1em; /* right and left padding */ 
+    padding: 0 .5em 0 .5em; 
 }
 
 p{ 
     font-family: 'Lora';
     font-weight: 100;
     color: #303030; 
-    padding: 0 1.5em 0 1.5em; /* right and left padding */ 
+    padding: 0 .5em .5em .5em; 
 }
 
 section{ 
@@ -88,7 +92,7 @@ section{
 } 
 
 section.image { 
-    padding-bottom: 1em; 
+/*    padding-bottom: 1em; */
 }
 
 section.textonly { 
@@ -111,3 +115,50 @@ article{
 figure.article{ 
     margin: 3.25em 0 2.75em 0; 
 }
+
+main.gallery{ 
+    position: relative; 
+    overflow: hidden; 
+    padding-bottom: calc(110% + 3em); 
+}
+
+figure.gallery{ 
+    width: calc(100%-2em); 
+    position: absolute; 
+    opacity: 0; 
+    transition: .5s; 
+}
+
+figcaption.gallery{ 
+    font-size: 1em; 
+    font-weight: bold;
+    margin: .5em 0;
+    color: #888;
+    text-align: left; 
+}
+
+input:nth-of-type(1):checked ~ main figure:nth-of-type(1),
+input:nth-of-type(2):checked ~ main figure:nth-of-type(2),
+input:nth-of-type(3):checked ~ main figure:nth-of-type(3),
+input:nth-of-type(4):checked ~ main figure:nth-of-type(4),
+input:nth-of-type(5):checked ~ main figure:nth-of-type(5),
+input:nth-of-type(6):checked ~ main figure:nth-of-type(6), 
+input:nth-of-type(7):checked ~ main figure:nth-of-type(7), 
+input:nth-of-type(8):checked ~ main figure:nth-of-type(8){
+    opacity: 1;
+}
+
+
+nav.gallery{ 
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    grid-gap: .2em;
+}
+
+
+input{ 
+    display: none; 
+}
+
+
+
